[package]
name = "webmommi"
version = "0.1.0"
authors = ["PJB3005 <pieterjan.briers+bot@gmail.com>"]
publish = false

[dependencies]
rocket = "0.3.2"
rocket_codegen = "0.3.2"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
rust-crypto = "0.2.36"
byteorder = "1.1.0"
rocket_contrib = "0.3.2"
rustc-serialize = "0.3.24"
lazy_static = "0.2.8"
yaml-rust = "0.3.5"
