[package]
name = "webmommi"
version = "0.1.0"
authors = ["PJB3005 <pieterjan.briers+bot@gmail.com>"]
publish = false
edition = "2018"

[profile.release]
lto = true

[dependencies]
rocket = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
rust-crypto = "0.2"
byteorder = "1"
rocket_contrib = "0.4"
rustc-serialize = "0.3"
lazy_static = "1"
yaml-rust = "0.4"
git2 = "0.8"
serde_yaml = "0.8"
regex = "1"
